Add formatVente support across sales and product entities
Introduced `FormatVente` handling in sales, products, and cart entities to enhance flexibility in managing different sale formats. Updated services, mappers, and database schema to support `FormatVente` integration, ensuring seamless data flow and persistence.