@@ -4,19 +4,19 @@ package com.projet.equipement.services;
 import com.projet.equipement.dto.panierProduit.PanierProduitGetDto;
 import com.projet.equipement.dto.panierProduit.PanierProduitPostDto;
 import com.projet.equipement.dto.panierProduit.PanierProduitUpdateDto;
-import com.projet.equipement.entity.Panier;
-import com.projet.equipement.entity.PanierProduit;
-import com.projet.equipement.entity.TenantContext;
+import com.projet.equipement.dto.produit.ProduitGetDto;
+import com.projet.equipement.entity.*;
 import com.projet.equipement.exceptions.EntityNotFoundException;
 import com.projet.equipement.mapper.PanierProduitMapper;
-import com.projet.equipement.repository.PanierProduitRepository;
-import com.projet.equipement.repository.PanierRepository;
+import com.projet.equipement.repository.*;
 import jakarta.persistence.EntityManager;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -26,19 +26,62 @@ public class PanierProduitService {
     private final PanierProduitRepository panierProduitRepository;
     private final PanierProduitMapper panierProduitMapper;
     private final EntityManager entityManager;
+    private final UniteVenteService uniteVenteService;
+    private final FormatVenteService formatVenteService;
+    private final FormatVenteRepository formatVenteRepository;
+    private final UniteVenteRepository uniteVenteRepository;
+    private final ProduitRepository produitRepository;
 
-    public PanierProduitService(PanierProduitRepository panierProduitRepository, PanierProduitMapper panierProduitMapper, EntityManager entityManager) {
+    public PanierProduitService(PanierProduitRepository panierProduitRepository, PanierProduitMapper panierProduitMapper, EntityManager entityManager, UniteVenteService uniteVenteService, FormatVenteService formatVenteService, FormatVenteRepository formatVenteRepository, UniteVenteRepository uniteVenteRepository, ProduitRepository produitRepository) {
         this.panierProduitRepository = panierProduitRepository;
         this.panierProduitMapper = panierProduitMapper;
         this.entityManager = entityManager;
+        this.uniteVenteService = uniteVenteService;
+        this.formatVenteService = formatVenteService;
+        this.formatVenteRepository = formatVenteRepository;
+        this.uniteVenteRepository = uniteVenteRepository;
+        this.produitRepository = produitRepository;
     }
 
     public Page<PanierProduitGetDto> findAll(Pageable pageable) {
         return panierProduitRepository.findAll(pageable).map(panierProduitMapper::toGetDto);
     }
 
+    @Transactional
     public List<PanierProduitGetDto> findAllByPanierId(Long id) {
-        return (panierProduitRepository.findAllByPanierId(id)).stream().map(panierProduitMapper::toGetDto).collect(Collectors.toList());
+        List<PanierProduitGetDto> panierProduitGetDtos = (panierProduitRepository.findAllByPanierId(id)).stream().map(panierProduitMapper::toGetDto).toList();
+        for (PanierProduitGetDto p : panierProduitGetDtos) {
+
+            Produit produit = produitRepository.findById(p.getId()).orElseThrow(()-> new EntityNotFoundException("Produit", p.getId()));
+
+            initFormatVente(produit);
+
+        }
+
+        return panierProduitGetDtos.stream().map(p -> {
+
+            ProduitGetDto produitGetDto= p.getProduit();
+            List<FormatVente> formatVentes = formatVenteService.findAllByProduitId(produitGetDto.getId(), Pageable.unpaged()).getContent();
+
+            produitGetDto.setFormatVentes(formatVentes);
+
+            return p ;
+        }).toList();
+    }
+
+    private void initFormatVente(Produit produit) {
+        Page<FormatVente> formatVentes = formatVenteRepository.findByProduitId(produit.getId(), Pageable.unpaged());
+
+        if (formatVentes.isEmpty()){
+            FormatVente formatVentePost = new FormatVente();
+            formatVentePost.setPrixVente(BigDecimal.valueOf(produit.getPrixVente()));
+            formatVentePost.setQuantiteParFormat(1);
+            formatVentePost.setLibelleFormat("Produit à l'unité");
+            formatVentePost.setProduit(produit);
+            formatVentePost.setUniteVente(uniteVenteRepository.findByCode("UNI").orElseThrow(()-> new EntityNotFoundException("Unité de vente", "UNI")));
+            formatVentePost.setTenantId(TenantContext.getTenantId());
+            formatVenteRepository.save(formatVentePost);
+        }
     }
 
     public PanierProduitGetDto findById(Long id) {
@@ -63,9 +106,19 @@ public class PanierProduitService {
             // cas de modification de la qte dans le panier
             produit.setQuantite(panierProduit.getQuantite());
             produit.setTenantId(TenantContext.getTenantId());
+            produit.setPrixVente(panierProduit.getPrixVente());
+
+            FormatVente formatVente = produit.getFormatVente();
+            if (panierProduit.getFormatVenteId() != null) {
+                formatVente = formatVenteService.findById(panierProduit.getFormatVenteId());
+            }
+            produit.setFormatVente(formatVente);
             saved = panierProduitRepository.save(produit);
         }else{
+            FormatVente formatVente = formatVenteService.findAllByProduitId(panierProduit.getProduitId(), Pageable.unpaged()).getContent().stream().findFirst().orElseThrow(()-> new EntityNotFoundException("Format de vente", panierProduit.getProduitId().toString()));
+
             PanierProduit entity = panierProduitMapper.toEntity(panierProduit);
+            entity.setFormatVente(formatVente);
             entity.setTenantId(TenantContext.getTenantId());
             saved = panierProduitRepository.save(entity);
         }
